# cricket

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: audio.rs  background.rs  level.rs  main.rs  player.rs  text_overlay.rs
