[package]
name = "cricket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version="0.7.0", features=["dynamic"]}
bevy_kira_audio = {version="0.9.0", features=["wav"]}
heron = {version="3.0.0", features=["2d"]}
